Use cc from clang

--- a/devshell.toml
+++ b/devshell.toml
@@ -2,7 +2,7 @@
 [devshell]
 packages = [
          "cargo",
-         "llvm",
+         "llvmPackages.clangUseLLVM",
          "rust-analyzer",
          "rustc"
 ]
