Add vscode cpptools extension for dap-cpptools
Still no local variables showing in debugger

--- a/devshell.toml
+++ b/devshell.toml
@@ -8,6 +8,7 @@ packages = [
          "rust-analyzer",
          "rustc",
          "rustfmt",
+         "vscode-extensions.ms-vscode.cpptools",
 ]
 
 [[commands]]
